--- a/kenjhi/kenjhi.csproj
+++ b/kenjhi/kenjhi.csproj
@@ -142,6 +142,12 @@
     <Compile Include="RJButton.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Ver Productos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ver Productos.Designer.cs">
+      <DependentUpon>Ver Productos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Ver_Clientes.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -175,6 +181,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Ver Productos.resx">
+      <DependentUpon>Ver Productos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Ver_Clientes.resx">
       <DependentUpon>Ver_Clientes.cs</DependentUpon>
     </EmbeddedResource>
