--- a/kenjhi/kenjhi.csproj
+++ b/kenjhi/kenjhi.csproj
@@ -118,6 +118,12 @@
     <Compile Include="Agregar_Clientes.Designer.cs">
       <DependentUpon>Agregar_Clientes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Cambiar Pass.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Cambiar Pass.Designer.cs">
+      <DependentUpon>Cambiar Pass.cs</DependentUpon>
+    </Compile>
     <Compile Include="CategoriaItem.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -168,6 +174,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Agregar_Clientes.resx">
       <DependentUpon>Agregar_Clientes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Cambiar Pass.resx">
+      <DependentUpon>Cambiar Pass.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
