--- a/kenjhi/kenjhi.csproj
+++ b/kenjhi/kenjhi.csproj
@@ -131,6 +131,12 @@
       <DependentUpon>Cambiar_Pass.cs</DependentUpon>
     </Compile>
     <Compile Include="CategoriaItem.cs" />
+    <Compile Include="Enviar_Opinion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Enviar_Opinion.Designer.cs">
+      <DependentUpon>Enviar_Opinion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -197,6 +203,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Cambiar_Pass.resx">
       <DependentUpon>Cambiar_Pass.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Enviar_Opinion.resx">
+      <DependentUpon>Enviar_Opinion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
