--- a/kenjhi/kenjhi.csproj
+++ b/kenjhi/kenjhi.csproj
@@ -131,6 +131,7 @@
       <DependentUpon>Cambiar_Pass.cs</DependentUpon>
     </Compile>
     <Compile Include="CategoriaItem.cs" />
+    <Compile Include="ComboboxItem.cs" />
     <Compile Include="Enviar_Opinion.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -142,6 +143,12 @@
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Ingresos_Producto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ingresos_Producto.Designer.cs">
+      <DependentUpon>Ingresos_Producto.cs</DependentUpon>
     </Compile>
     <Compile Include="Menu.cs">
       <SubType>Form</SubType>
@@ -215,6 +222,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ingresos_Producto.resx">
+      <DependentUpon>Ingresos_Producto.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Menu.resx">
       <DependentUpon>Menu.cs</DependentUpon>
