encriptado de pass puesto + dise;o de busqueda para ver_clientes dgv

--- a/kenjhi/kenjhi.csproj
+++ b/kenjhi/kenjhi.csproj
@@ -287,5 +287,8 @@
   <ItemGroup>
     <None Include="Resources\infinity-amarillo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\busqueda.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
