--- a/kenjhi/kenjhi.csproj
+++ b/kenjhi/kenjhi.csproj
@@ -131,6 +131,7 @@
       <DependentUpon>Cambiar_Pass.cs</DependentUpon>
     </Compile>
     <Compile Include="CategoriaItem.cs" />
+    <Compile Include="Cliente.cs" />
     <Compile Include="ComboboxItem.cs" />
     <Compile Include="Enviar_Opinion.cs">
       <SubType>Form</SubType>
@@ -162,6 +163,7 @@
     <Compile Include="Nueva_Venta.Designer.cs">
       <DependentUpon>Nueva_Venta.cs</DependentUpon>
     </Compile>
+    <Compile Include="Producto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
