--- a/kenjhi/kenjhi.csproj
+++ b/kenjhi/kenjhi.csproj
@@ -89,6 +89,7 @@
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System.Transactions" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -150,6 +151,12 @@
     </Compile>
     <Compile Include="frmLogin.Designer.cs">
       <DependentUpon>frmLogin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmsAdmin\frmEstadisticas_Admin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmsAdmin\frmEstadisticas_Admin.Designer.cs">
+      <DependentUpon>frmEstadisticas_Admin.cs</DependentUpon>
     </Compile>
     <Compile Include="frmsAdmin\frmNuevaVenta_Admin.cs">
       <SubType>Form</SubType>
@@ -263,6 +270,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmsAdmin\frmEstadisticas_Admin.resx">
+      <DependentUpon>frmEstadisticas_Admin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmsAdmin\frmNuevaVenta_Admin.resx">
       <DependentUpon>frmNuevaVenta_Admin.cs</DependentUpon>
