--- a/kenjhi/kenjhi.csproj
+++ b/kenjhi/kenjhi.csproj
@@ -373,6 +373,7 @@
     <None Include="Resources\cerrar sesion.png" />
     <None Include="Resources\empleados.png" />
     <None Include="Resources\productos.png" />
+    <None Include="Resources\proteina %281%29.png" />
     <Content Include="Resources\Sin-título-1 %281%29.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
