solucionado problema ventas, terminado recuperar datos, terminado grafico y terminado agregado de detalle en el menu principal

--- a/kenjhi/kenjhi.csproj
+++ b/kenjhi/kenjhi.csproj
@@ -374,6 +374,7 @@
     <None Include="Resources\empleados.png" />
     <None Include="Resources\productos.png" />
     <None Include="Resources\proteina %281%29.png" />
+    <None Include="Resources\imprimir.png" />
     <Content Include="Resources\Sin-título-1 %281%29.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
