--- a/kenjhi/kenjhi.csproj
+++ b/kenjhi/kenjhi.csproj
@@ -212,6 +212,12 @@
     <Compile Include="frmsAdmin\frmMenu_Admin.Designer.cs">
       <DependentUpon>frmMenu_Admin.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmsAdmin\frmVerIngresosProductos_Admin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmsAdmin\frmVerIngresosProductos_Admin.Designer.cs">
+      <DependentUpon>frmVerIngresosProductos_Admin.cs</DependentUpon>
+    </Compile>
     <Compile Include="Producto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -282,6 +288,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmsAdmin\frmVerCategorias_Admin.resx">
       <DependentUpon>frmVerCategorias_Admin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmsAdmin\frmVerIngresosProductos_Admin.resx">
+      <DependentUpon>frmVerIngresosProductos_Admin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmsAdmin\frmVerVentas_Admin.resx">
       <DependentUpon>frmVerVentas_Admin.cs</DependentUpon>
