--- a/kenjhi/kenjhi.csproj
+++ b/kenjhi/kenjhi.csproj
@@ -101,6 +101,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmsAdmin\frmClientesDeudores_Admin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmsAdmin\frmClientesDeudores_Admin.Designer.cs">
+      <DependentUpon>frmClientesDeudores_Admin.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmsAdmin\frmAgregarCategoria_Admin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -276,6 +282,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmsAdmin\frmClientesDeudores_Admin.resx">
+      <DependentUpon>frmClientesDeudores_Admin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmsAdmin\frmEstadisticas_Admin.resx">
       <DependentUpon>frmEstadisticas_Admin.cs</DependentUpon>
