--- a/kenjhi/kenjhi.csproj
+++ b/kenjhi/kenjhi.csproj
@@ -188,24 +188,6 @@
     <Compile Include="frmsAdmin\frmVerVentas_Admin.Designer.cs">
       <DependentUpon>frmVerVentas_Admin.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmsEmpleado\frmAgregarCliente_Empleado.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmsEmpleado\frmAgregarCliente_Empleado.Designer.cs">
-      <DependentUpon>frmAgregarCliente_Empleado.cs</DependentUpon>
-    </Compile>
-    <Compile Include="frmsEmpleado\frmMenu_Empleado.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmsEmpleado\frmMenu_Empleado.Designer.cs">
-      <DependentUpon>frmMenu_Empleado.cs</DependentUpon>
-    </Compile>
-    <Compile Include="frmsEmpleado\frmVerClientes_Empleado.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmsEmpleado\frmVerClientes_Empleado.Designer.cs">
-      <DependentUpon>frmVerClientes_Empleado.cs</DependentUpon>
-    </Compile>
     <Compile Include="frmsAdmin\frmIngresosProducto_Admin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -223,6 +205,12 @@
     </Compile>
     <Compile Include="frmsAdmin\frmVerIngresosProductos_Admin.Designer.cs">
       <DependentUpon>frmVerIngresosProductos_Admin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmsEmpleados\frmMenu_Empleados.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmsEmpleados\frmMenu_Empleados.Designer.cs">
+      <DependentUpon>frmMenu_Empleados.cs</DependentUpon>
     </Compile>
     <Compile Include="Producto.cs" />
     <Compile Include="Program.cs" />
@@ -304,20 +292,14 @@
     <EmbeddedResource Include="frmsAdmin\frmVerVentas_Admin.resx">
       <DependentUpon>frmVerVentas_Admin.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmsEmpleado\frmAgregarCliente_Empleado.resx">
-      <DependentUpon>frmAgregarCliente_Empleado.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmsEmpleado\frmMenu_Empleado.resx">
-      <DependentUpon>frmMenu_Empleado.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmsEmpleado\frmVerClientes_Empleado.resx">
-      <DependentUpon>frmVerClientes_Empleado.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="frmsAdmin\frmIngresosProducto_Admin.resx">
       <DependentUpon>frmIngresosProducto_Admin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmsAdmin\frmMenu_Admin.resx">
       <DependentUpon>frmMenu_Admin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmsEmpleados\frmMenu_Empleados.resx">
+      <DependentUpon>frmMenu_Empleados.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -395,5 +377,6 @@
     <None Include="Resources\imprimir.png" />
     <Content Include="Resources\Sin-título-1 %281%29.ico" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
